--- a/Components/Control/Web.config
+++ b/Components/Control/Web.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0"?>
-
 <configuration>
-
     <system.web>
-        <compilation debug="false" targetFramework="4.0" />
+        <authorization >
+            <deny users="?"/>
+        </authorization>
     </system.web>
-
 </configuration>
