--- a/Web.config
+++ b/Web.config
@@ -3,6 +3,8 @@
 <configuration>
   <system.web>
     <compilation debug="false" targetFramework="4.0" />
+      <pages validateRequest="false" />
+      <httpRuntime requestValidationMode="2.0" />
   </system.web>
     <system.webServer>
         <defaultDocument>
