Update project source

--- a/Web.config
+++ b/Web.config
@@ -3,6 +3,7 @@
 <configuration>
   <system.web>
     <compilation debug="false" targetFramework="4.0" />
+    <globalization fileEncoding="utf-8" />
   </system.web>
     <system.webServer>
         <defaultDocument>
@@ -10,6 +11,10 @@
                 <add value="Default.cshtml" />
             </files>
         </defaultDocument>
+      <httpErrors>
+        <remove statusCode="404" subStatusCode="-1" />
+        <error statusCode="404" prefixLanguageFilePath="" path="/Components/ErrorFiles/404.html" responseMode="ExecuteURL" />
+      </httpErrors>
     </system.webServer>
     <system.data>
         <DbProviderFactories>
