--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,9 @@
   <system.web>
     <compilation debug="false" targetFramework="4.0" />
     <globalization fileEncoding="utf-8" />
+    <customErrors redirectMode="ResponseRewrite" defaultRedirect="/Error/500">
+      <error statusCode="404" redirect="/Components/ErrorFiles/404.html" />
+    </customErrors>
   </system.web>
     <system.webServer>
         <defaultDocument>
