--- a/Web.config
+++ b/Web.config
@@ -1,28 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.web>
-    <compilation debug="false" targetFramework="4.0" />
+    <compilation debug="true" defaultLanguage="c#" targetFramework="4.0" />
     <globalization fileEncoding="utf-8" />
-    <customErrors redirectMode="ResponseRewrite" defaultRedirect="/Error/500">
+    <customErrors defaultRedirect="/Components/ErrorFiles/500.html" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/Components/ErrorFiles/404.html" />
+            <error redirect="/Components/ErrorFiles/403.html" statusCode="403" />
+            <error redirect="/Components/ErrorFiles/500.html" statusCode="500" />
     </customErrors>
+    <authentication mode="Forms">
+      <forms defaultUrl="/Default" />
+    </authentication>
   </system.web>
-    <system.webServer>
-        <defaultDocument>
-            <files>
-                <add value="Default.cshtml" />
-            </files>
-        </defaultDocument>
-      <httpErrors>
-        <remove statusCode="404" subStatusCode="-1" />
-        <error statusCode="404" prefixLanguageFilePath="" path="/Components/ErrorFiles/404.html" responseMode="ExecuteURL" />
-      </httpErrors>
-    </system.webServer>
-    <system.data>
-        <DbProviderFactories>
-            <remove invariant="System.Data.SqlServerCe.4.0" />
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="Default.cshtml" />
+      </files>
+    </defaultDocument>
+    <httpErrors>
+            <remove statusCode="500" subStatusCode="-1" />
+            <remove statusCode="403" subStatusCode="-1" />
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" prefixLanguageFilePath="" path="/Components/ErrorFiles/404.html" responseMode="ExecuteURL" />
+            <error statusCode="403" prefixLanguageFilePath="" path="/Components/ErrorFiles/403.html" responseMode="ExecuteURL" />
+            <error statusCode="500" prefixLanguageFilePath="" path="/Components/ErrorFiles/500.html" responseMode="ExecuteURL" />
+    </httpErrors>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Author" value="Sergey Khokhlov" />
+      </customHeaders>
+    </httpProtocol>
+        <rewrite>
+            <rules>
+                <rule name="RemoveTrailingSlashRule1" stopProcessing="true">
+                    <match url="(.*)/$" />
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                    </conditions>
+                    <action type="Redirect" url="{R:1}" />
+                </rule>
+            </rules>
+        </rewrite>
+  </system.webServer>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SqlServerCe.4.0" />
             <add invariant="System.Data.SqlServerCe.4.0" name="Microsoft® SQL Server® Compact 4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-        </DbProviderFactories>
-    </system.data>
+    </DbProviderFactories>
+  </system.data>
 </configuration>
