Added a link to the site

--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,8 @@
     <globalization fileEncoding="utf-8" />
     <customErrors defaultRedirect="/Components/ErrorFiles/500.html" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/Components/ErrorFiles/404.html" />
-            <error redirect="/Components/ErrorFiles/403.html" statusCode="403" />
-            <error redirect="/Components/ErrorFiles/500.html" statusCode="500" />
+      <error redirect="/Components/ErrorFiles/403.html" statusCode="403" />
+      <error redirect="/Components/ErrorFiles/500.html" statusCode="500" />
     </customErrors>
     <authentication mode="Forms">
       <forms defaultUrl="/Default" />
@@ -19,30 +19,35 @@
       </files>
     </defaultDocument>
     <httpErrors>
-            <remove statusCode="500" subStatusCode="-1" />
-            <remove statusCode="403" subStatusCode="-1" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <remove statusCode="403" subStatusCode="-1" />
       <remove statusCode="404" subStatusCode="-1" />
       <error statusCode="404" prefixLanguageFilePath="" path="/Components/ErrorFiles/404.html" responseMode="ExecuteURL" />
-            <error statusCode="403" prefixLanguageFilePath="" path="/Components/ErrorFiles/403.html" responseMode="ExecuteURL" />
-            <error statusCode="500" prefixLanguageFilePath="" path="/Components/ErrorFiles/500.html" responseMode="ExecuteURL" />
+      <error statusCode="403" prefixLanguageFilePath="" path="/Components/ErrorFiles/403.html" responseMode="ExecuteURL" />
+      <error statusCode="500" prefixLanguageFilePath="" path="/Components/ErrorFiles/500.html" responseMode="ExecuteURL" />
     </httpErrors>
     <httpProtocol>
       <customHeaders>
         <add name="X-Author" value="Sergey Khokhlov" />
       </customHeaders>
     </httpProtocol>
-        <rewrite>
-            <rules>
-                <rule name="RemoveTrailingSlashRule1" stopProcessing="true">
-                    <match url="(.*)/$" />
-                    <conditions>
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                    </conditions>
-                    <action type="Redirect" url="{R:1}" />
-                </rule>
-            </rules>
-        </rewrite>
+    <rewrite>
+      <rules>
+        <rule name="LowerCaseRule1" stopProcessing="true">
+          <match url="[A-Z]" ignoreCase="false" />
+          <action type="Redirect" url="{ToLower:{URL}}" />
+        </rule>
+
+        <rule name="RemoveTrailingSlashRule1" stopProcessing="true">
+          <match url="(.*)/$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" url="{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <system.data>
     <DbProviderFactories>
