--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.web>
-    <compilation debug="true" defaultLanguage="c#" targetFramework="4.0" />
+    <compilation debug="false" defaultLanguage="c#" targetFramework="4.0" />
     <globalization fileEncoding="utf-8" />
     <customErrors defaultRedirect="/Components/ErrorFiles/500.html" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/Components/ErrorFiles/404.html" />
